--- a/css/custom.css
+++ b/css/custom.css
@@ -95,7 +95,7 @@
 /* map style */
 #map {width: 100%; height: 600px; background-color: #F7CE86;}
     .leaflet-popup-content li {list-style:none;}
-    .leaflet-popup-content {width: 150px;}
+    .leaflet-popup-content {width: 180px;font:'Raleway';}
     .leaflet-popup-content img {width: 140px;}
     a {border: none;}
 
