--- a/css/custom.css
+++ b/css/custom.css
@@ -93,7 +93,7 @@
   .has-docked-nav .navbar > .container {
     width: 80%; }
 /* map style */
-#map {width: 100%; height: 50%; background-color: #F7CE86;}
+#map {width: 100%; height: 700px; background-color: #F7CE86;}
     .leaflet-popup-content li {list-style:none;}
     .leaflet-popup-content {width: 180px;font:'Raleway';}
     .leaflet-popup-content img {width: 140px;}
