--- a/css/custom.css
+++ b/css/custom.css
@@ -104,11 +104,18 @@
     text-transform: uppercase;
     font-weight: 700;
     }
-    #hackSpotsTable {cursor: pointer; background: #fff; overflow-x: auto; padding-bottom: 20px;}
-    #hackSpotsTable table {min-width: 900px;}
-    #hackSpotsTable .tHeader:hover {color: #FF4646;}
+    #hotpotsTable {cursor: pointer; background: #fff; overflow-x: auto; padding-bottom: 20px;}
+    #hotSpotsTable table {min-width: 900px;}
+    #hotSpotsTable .tHeader:hover {color: #FF4646;}
     .tHeader::after {content: " \2193 \2191 "; font-size: 10px; padding-left: 3px;}
     .spotRow:hover {color: #FF4646;}
     .spotRow {border-left: 3px solid #ff00ff;}
     .hideRow {display: none;}
     .selectedRow {color: #FF4C0D;}
+
+#Pagination {border-top: 4px solid #CCF4FF; margin: 10px 0px; padding-top: 10px; display: inline-block;}
+    #Pagination a {cursor: pointer;}
+    .no-pag {color: #acacac; border: none;}
+    .no-pag:hover {color: #acacac;}
+    input {border: none; border-bottom: 1px solid #333;margin: 10px 0px; width: 200px; font-size: 16px; padding-bottom: 6px;}
+    .tHeader {padding: 8px; cursor: pointer; text-align: left;}
